# remote-work

./: .gitignore  Cargo.toml  README.md  team.example.json
discord/: Cargo.toml
discord/src/: main.rs
remote-work/: Cargo.toml
remote-work/src/models/: member.rs  mod.rs  team.rs
remote-work/src/utils/: time.rs
visualizer/: Cargo.toml
visualizer/src/: lib.rs  main.rs
