[package]
name = "remote_work_visualizer"

version.workspace = true
edition.workspace = true

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.2"
tempfile = "3.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { workspace = true }
chrono-tz = { workspace = true }

[dependencies.remote_work]
path = "../remote-work"
